Simplify the configuration

--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -45,7 +45,7 @@
 Будем использовать обозначение $dom(c)$, как область значения локальных частей состояния, то есть $dom(c)=dom(c_{pc})=dom(c_l)$.
 
 Отношение переходов $TR \subseteq C \times G \times T \times C$ определяет преобразование конкретных состояний под действием операторов программы. 
-Переход  $(c_1, g, t, c_2)$, где $(c_1, c_2 \in C)$ моделирует переход программы из состояния $c_1$ в состояние $c_2$ при выполнении потоком $t \in T$ операции на дуге $g \in G$.
+Переход  $(c_1, g, t, c_2)$, где $c_1, c_2 \in C$ моделирует переход программы из состояния $c_1$ в состояние $c_2$ при выполнении потоком $t \in T$ операции на дуге $g \in G$.
 Для наглядности будем использовать обозначение $c_1 \tc{g, t} c_2$ вместо $(c_1, g, t, c_2) \in TR$.
 Для полноты будем считать, что существует специальный $\varepsilon$-переход из каждого состояния в себя:
 $\forall c \in C, t \in T: c \tc{\varepsilon, t} c$.
@@ -192,10 +192,10 @@ $c \tc{g, t} c'$, $c=(c_{pc}, c_l, c_g, c_s)$, $c'=(c'_{pc}, c'_l, c'_g, c'_s) \
 Состояние гонки обычно определяются с помощью такой конструкции, как последовательность
 
 \begin{small}
-\begin{lstlisting}
+\begin{verbatim}
 variable = expression;
 assert(variable == expression);
-\end{lstlisting}
+\end{verbatim}
 \end{small}
 
 Эта конструкция моделирует проверку, не может ли измениться значение переменной $variable$ в данной точке программы.
@@ -517,7 +517,7 @@ Cpa-операторы корневого CPA используются в алг
 В итоге, в таких сложных случаях считается, что глобальные переменные могут принимать любые значения.
 А это, в свою очередь, снижает точность анализа. 
 
-Предлагаемый подход базируется на известной идее раздельного анализа потоков (thread-modular approach).
+Предлагаемый подход базируется на известной идее раздельного анализа потоков (англ. thread-modular approach).
 Потоки в этом случае анализируются по-отдельности, одновременно с этим строится общее для всех потоков окружение, которое аппроксимирует сверху влияние других потоков.
 Это окружение формируется на основе анализа всех потоков, так как каждый поток являются частью окружения для других потоков.
 Для каждого потока определяется, как и в каких условиях он может модифицировать разделяемые данные, использовать примитивы синхронизации и выполнять иные действия, влияющие на другие потоки.
@@ -2746,100 +2746,3 @@ t_n
 \item Построение множества достижимых состояний с использованием подхода с раздельным анализом потоков.
 \item Поиск таких пар абстрактных переходов, которые удовлетворяют определению~\ref{raceDef_abstract}.
 \end{itemize}
-
-%\newpage
-%============================================================================================================================
-%\section{Длинное название параграфа, в котором мы узнаём как сделать две картинки с~общим номером и названием} \label{sect2_2}
-%
-%А это две картинки под общим номером и названием:
-%\begin{figure}[ht]
-%  \begin{minipage}[ht]{0.49\linewidth}\centering
-%    \includegraphics[width=0.5\linewidth]{knuth1} \\ а)
-%  \end{minipage}
-%  \hfill
-%  \begin{minipage}[ht]{0.49\linewidth}\centering
-%    \includegraphics[width=0.5\linewidth]{knuth2} \\ б)
-%  \end{minipage}
-%  \caption{Очень длинная подпись к изображению, на котором представлены две фотографии Дональда Кнута}
-%  \label{img:knuth}  
-%\end{figure}
-%
-%Те~же~две картинки под~общим номером и~названием, но с автоматизированной нумерацией подрисунков:
-%\begin{figure}[ht]
-%    {\centering
-%        \hfill
-%        \subbottom[List-of-Figures entry][Первый подрисунок\label{img:knuth_2_1}]{%
-%            \includegraphics[width=0.25\linewidth]{knuth1}}
-%        \hfill
-%        \subbottom[\label{img:knuth_2_2}]{%
-%            \includegraphics[width=0.25\linewidth]{knuth2}}
-%        \hfill
-%        \subbottom[Третий подрисунок]{%
-%            \includegraphics[width=0.3\linewidth]{example-image-c}}
-%        \hfill
-%    }
-%    \legend{Подрисуночный текст, описывающий обозначения, например. Согласно
-%    ГОСТ 2.105, пункт 4.3.1, располагается перед наименованием рисунка.}
-%    \caption[Этот текст попадает в названия рисунков в списке рисунков]{Очень
-%    длинная подпись к второму изображению, на котором представлены две
-%    фотографии Дональда Кнута}
-%    \label{img:knuth_2}
-%\end{figure}
-%
-%\section{Традиции русского набора}
-%
-%\subsection{Пробелы}
-%
-%В~русском наборе принято:
-%\begin{itemize}
-%    \item единицы измерения, знак процента отделять пробелами от~числа: 10~кВт, 15~\% (согласно ГОСТ 8.417, раздел 8);
-%    \item $\tg 20^\circ$, но: 20~${}^\circ$C (согласно ГОСТ 8.417, раздел 8);
-%    \item знак номера, параграфа отделять от~числа: №~5, \S~8;
-%    \item стандартные сокращения: т.\:е., и~т.\:д., и~т.\:п.;
-%    \item неразрывные пробелы в~предложениях.
-%\end{itemize}
-%
-%\subsection{Математические знаки и символы}
-%
-%Русская традиция начертания греческих букв и некоторых математических
-%функций отличается от~западной. Это исправляется серией
-%\verb|\renewcommand|.
-%\begin{itemize}
-%%Все \original... команды заранее, ради этого примера, определены в Dissertation\userstyles.tex
-%    \item[До:] \( \originalepsilon \originalge \originalphi\),
-%    \(\originalphi \originalleq \originalepsilon\),
-%    \(\originalkappa \in \originalemptyset\),
-%    \(\originaltan\),
-%    \(\originalcot\),
-%    \(\originalcsc\).
-%    \item[После:] \( \epsilon \ge \phi\),
-%    \(\phi \leq \epsilon\),
-%    \(\kappa \in \emptyset\),
-%    \(\tan\),
-%    \(\cot\),
-%    \(\csc\).
-%\end{itemize}
-%
-%Кроме того, принято набирать греческие буквы вертикальными, что
-%решается подключением пакета \verb|upgreek| (см. закомментированный
-%блок в~\verb|userpackages.tex|) и~аналогичным переопределением в
-%преамбуле (см.~закомментированный блок в \verb|userstyles.tex|). В
-%этом шаблоне такие переопределения уже включены.
-%
-%Знаки математических операций принято переносить. Пример переноса
-%в~формуле \eqref{eq:equation3}.
-
-%\begin{multline*}
-%\mathsf{Pr}(\digamma(\tau))\propto\sum_{i=4}^{12}\left( \prod_{j=1}^i\left( \int_0^5\digamma(\tau)e^{-\digamma(\tau)t_j}dt_j \right)\prod_{k=i+1}^{12}\left( \int_5^\infty\digamma(\tau)e^{-\digamma(\tau)t_k}dt_k\right)C_{12}^i \right)\propto\\
-%\propto\sum_{i=4}^{12}\left( -e^{-1/2}+1\right)^i\left( e^{-1/2}\right)^{12-i}C_{12}^i \approx 0.7605,\quad \forall\tau\neq\overline{\tau}
-%\end{multline*}
-%
-%
-%%Большая фигурная скобка только справа
-%\[\left.                                                          %ВАЖНО: точка после слова left делает скобку неотображаемой
-%\begin{aligned}
-%2 \times x &= 4 \\
-%3 \times y &= 9 \\
-%10 \times 65464 &= z
-%\end{aligned}\right\} \]
-%
