--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -79,7 +79,7 @@
 
 %\noindent Телефон для справок: \defenseCouncilPhone.
 
-\vspace{1px}
+\vspace{1pt}
 \noindent%
 \begin{tabularx}{\textwidth}{@{}%
 >{\raggedright\arraybackslash}b{18em}@{}
