--- a/common/packages.tex
+++ b/common/packages.tex
@@ -1,18 +1,4 @@
-%%% Проверка используемого TeX-движка %%%
-\RequirePackage{ifxetex, ifluatex}
-\newif\ifxetexorluatex   % определяем новый условный оператор (http://tex.stackexchange.com/a/47579)
-\ifxetex
-    \xetexorluatextrue
-\else
-    \ifluatex
-        \xetexorluatextrue
-    \else
-        \xetexorluatexfalse
-    \fi
-\fi
-
 \newif\ifsynopsis           % Условие, проверяющее, что документ --- автореферат
-  
 
 \RequirePackage{etoolbox}[2015/08/02]               % Для продвинутой проверки разных условий
 
@@ -21,14 +7,8 @@
 \usepackage{geometry}                               % Для последующего задания полей
 
 %%% Математические пакеты %%%
-\usepackage{amsthm,amsmath,amscd}       % Математические дополнения от AMS
-\ifxetexorluatex
-    \usepackage{amsfonts,amssymb}       % Математические дополнения от AMS
-\else
-    \ifnumequal{\value{usealtfont}}{2}{}{
-        \usepackage{amsfonts,amssymb}       % Математические дополнения от AMS
-    }
-\fi
+\usepackage{amsthm,amsmath,amscd}
+\usepackage{amsfonts,amssymb}       % Математические дополнения от AMS
 \usepackage{mathtools}                  % Добавляет окружение multlined
 \usepackage{mathrsfs}                  % Добавляет окружение multlined
 
@@ -45,31 +25,7 @@
 \makeatother
 
 %%% Кодировки и шрифты %%%
-\ifxetexorluatex
-    \usepackage{polyglossia}[2014/05/21]            % Поддержка многоязычности (fontspec подгружается автоматически)
-\else
-   %%% Решение проблемы копирования текста в буфер кракозябрами
-    \ifnumequal{\value{usealtfont}}{1}{% Используется pscyr, при наличии
-        \IfFileExists{pscyr.sty}{% вероятно, без pscyr нет необходимости в этом коде
-            \input glyphtounicode.tex
-            \input glyphtounicode-cmr.tex %from pdfx package
-            \pdfgentounicode=1
-        }{}
-    }{}
-    \usepackage{cmap}                               % Улучшенный поиск русских слов в полученном pdf-файле
-    \defaulthyphenchar=127                          % Если стоит до fontenc, то переносы не впишутся в выделяемый текст при копировании его в буфер обмена 
-    \usepackage[T1,T2A]{fontenc}                    % Поддержка русских букв
-    \ifnumequal{\value{usealtfont}}{1}{% Используется pscyr, при наличии
-        \IfFileExists{pscyr.sty}{\usepackage{pscyr}}{}  % Подключение pscyr
-    }{}
-    \usepackage[utf8]{inputenc}[2014/04/30]         % Кодировка utf8
-    \usepackage[english, russian]{babel}[2014/03/24]% Языки: русский, английский
-    \ifnumequal{\value{usealtfont}}{2}{
-        % http://dxdy.ru/post1238763.html#p1238763
-        \usepackage[scaled=0.925]{XCharter}[2017/06/25] % Подключение русифицированных шрифтов XCharter
-        \usepackage[bitstream-charter]{mathdesign} % Согласование математических шрифтов
-    }{}
-\fi
+\usepackage{polyglossia}[2014/05/21]            % Поддержка многоязычности (fontspec подгружается автоматически)
 
 %%% Оформление абзацев %%%
 \usepackage{indentfirst}                            % Красная строка
@@ -101,23 +57,6 @@
 \usepackage{totpages}                               % Счётчик страниц, совместимый с hyperref (ссылается на номер последней страницы). Желательно ставить последним пакетом в преамбуле
 
 \usepackage[]{algorithm2e}
-%%% Продвинутое управление групповыми ссылками (пока только формулами) %%%
-\ifxetexorluatex
-    \usepackage{cleveref}                           % cleveref корректно считывает язык из настроек polyglossia
-\else
-    \usepackage[russian]{cleveref}                  % cleveref имеет сложности со считыванием языка из babel. Такое решение русификации вывода выбрано вместо определения в documentclass из опасности что-то лишнее передать во все остальные пакеты, включая библиографию.
-\fi
-\creflabelformat{equation}{#2#1#3}                  % Формат по умолчанию ставил круглые скобки вокруг каждого номера ссылки, теперь просто номера ссылок без какого-либо дополнительного оформления
-\crefrangelabelformat{equation}{#3#1#4\cyrdash#5#2#6}   % Интервалы в русском языке принято делать через тире, если иное не оговорено
-
-
-\ifnumequal{\value{draft}}{1}{% Черновик
-    \usepackage[firstpage]{draftwatermark}
-    \SetWatermarkText{DRAFT}
-    \SetWatermarkFontSize{14pt}
-    \SetWatermarkScale{15}
-    \SetWatermarkAngle{45}
-}{}
 
 %%% Цитата, не приводимая в автореферате:
 % возможно, актуальна только для biblatex
