--- a/dissertation.tex
+++ b/dissertation.tex
@@ -3,7 +3,6 @@
 % Формат А4, 14pt (ГОСТ Р 7.0.11-2011, 5.3.6)
 \documentclass[a4paper,14pt,oneside,openany]{memoir}
 
-\input{common/setup}               % общие настройки шаблона
 \input{common/packages}  % Пакеты общие для диссертации и автореферата
 \synopsisfalse                           % Этот документ --- не автореферат
 \input{Dissertation/dispackages}         % Пакеты для диссертации
@@ -18,7 +17,7 @@
 \input{common/styles}    % Стили общие для диссертации и автореферата
 \input{Dissertation/disstyles}           % Стили для диссертации
 \input{Dissertation/userstyles}          % Стили для специфических пользовательских задач
-\input{biblio/bibliopreamble}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
+\input{biblio/predefined}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
 
 %\includeonly{Dissertation/contents,Dissertation/appendix,Dissertation/conclusion}
 
