--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -1,12 +1,12 @@
 \newcommand{\epp}{\mathrel{\bigoplus}}
 
-\chapter{Метод верификации многопоточной программы с раздельным рассмотрением потоков}
+\chapter{Метод анализа корректности синхронизации многопоточной программы с раздельным рассмотрением потоков}
 \label{chapter_theory}
 
 \section{Основные определения}
 
-В данной главе описывается метод верификации многопоточной программы с раздельным рассмотрением потоков.
-Описание метода опирается понятия, используемые в статической верификации. 
+В данной главе описывается метод анализа корректности синхронизации многопоточной программы с раздельным рассмотрением потоков.
+Описание метода опирается на понятия, используемые в статической верификации. 
 Основными из них являются понятия \textit{состояние программы}, \textit{достижимости} и \textit{абстракции}.
 Описанию этих и других необходимых понятий посвящена данная секция.
 
@@ -384,7 +384,7 @@ Cpa-оператор останова должен удовлетворять с
 \section{Алгоритм вычисления достижимых переходов}
 
 Алгоритм~\ref{cpata_algorithm_ps} представляет основной алгоритм, который вычисляет множество достижимых абстрактных переходов.
-Он также не претерпел никаких изменений относительно классической теории CPA за исключением расширения cpa-оператора transfer.
+Он также не претерпел никаких изменений относительно классической теории CPA за исключением расширения cpa-оператора $transfer$.
  
 Описание алгоритма состоит из входных данных $Data$, описания результата $result$ и, собственно, алгоритма.
 
