--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -22,7 +22,7 @@
 \thesisTitle}
 
 \vspace{0pt plus3fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-{\large Специальность \thesisSpecialtyNumber\ "---\par <<\thesisSpecialtyTitle>>}
+{\large Специальность \thesisSpecialtyNumber\ "---\par \thesisSpecialtyTitle}
 
 \vspace{0pt plus1.5fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 \Large{Автореферат}\par
@@ -37,12 +37,12 @@
 % оборотная сторона обложки
 \thispagestyle{empty}
 \SingleSpacing
-\noindent Работа выполнена в {Федеральном государственном бюджетном учреждении науки Институте системного программирования им. В.П. Иванникова Российской академии наук} и в {Федеральном государственном автономном образовательном учреждении высшего образования <<Московский физико-технический институт (национальный исследовательский университет)>>}.
+\noindent Работа выполнена в {Федеральном государственном бюджетном учреждении науки <<Институт системного программирования им. В.П. Иванникова Российской академии наук>>} и в {Федеральном государственном автономном образовательном учреждении высшего образования <<Московский физико-технический институт (национальный исследовательский университет)>>}.
 
 \vspace{1mm}
 \noindent%
 \begin{tabularx}{\textwidth}{@{}lX@{}}
-    Научный руководитель:   & \textbf{\supervisorFio}\par
+    Научный руководитель:   & \textbf{\supervisorFio},\par
                               \supervisorRegalia 
 \\
 %    \vspace{1mm}\\
