--- a/biblio/authorpapersVAK.bib
+++ b/biblio/authorpapersVAK.bib
@@ -1,3 +1,5 @@
+
+
 @ARTICLE{lockatorVAK,
   author = {Андрианов П.С. and Мутилин В.С. and Хорошилов А.В.},
   addendum = {(0,28~п.~л.)},
@@ -48,4 +50,23 @@
   number = {31},
   pages = {203--232},
   language = {russian}
+}
+
+@ARTICLE{KernelRaces,
+  author={Pavel Andrianov},
+  title={Analysis of Correct Synchronization of Operating System Components},
+  journal={Programming and Computer Software},
+  year={2020},
+  volume = {46},
+  number = {8},
+  pages={712–730}
+}
+
+@ARTICLE{LockatorScalable,
+author={Pavel Andrianov and Vadim Mutilin},
+title={Scalable Thread-Modular Approach for Data Race Detection},
+journal={Frontiers in Software Engineering Education},
+year={2020},
+publisher={Springer},
+pages={371-385}
 }
