--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -8,8 +8,8 @@
 %Для эффективного использования многоядерных систем широко используется многопоточное программное обеспечение, в том числе и системное программное обеспечение.
 Таким образом, задача повышения производительности компьютерных систем становится чрезвычайно важной.
 Развитие технологий многоядерности и многопоточности являются важнейшими направлениями решения данной задачи.
-Например, в ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных активностей: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
-Только за счет использования многопоточности современные системы могут обеспечивать необходимые показатели скорости и производительности.
+Например, в ядре операционной системы может параллельно выполняться большое число (несколько десятков) совершенно различных активностей: обработчики прерываний, системные вызовы от пользовательских программ, драйверы внешних устройств, внутренние службы ядра, например, планировщик.
+Только за счет использования многопоточности современные системы могут обеспечивать необходимые показатели производительности.
 %
 
 %Информационные системы непрерывно развиваются и усложняются. 
@@ -37,13 +37,13 @@
 %Основной сложностью таких алгоритмов является обеспечение синхронизации между потоками и корректным использованием разделяемых ресурсов.
 %В связи с этим появляются новые типы ошибок, характерные только для параллельно исполняемого кода. 
 
-В дополнение к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: например, состояния взаимной блокировки и состояния <<гонки>>.
+В дополнение к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: например, состояния <<гонки>> и состояния взаимной блокировки.
 В общем случае состоянием гонки называют ситуацию, при которой поведение программы зависит от порядка или времени выполнения некоторых неконтролируемых событий.
 Важное уточнение заключается в том, что такое выполнение не всегда является ошибкой.
 Проблемы возникают тогда, когда разработчик не предусматривает некоторое из возможных поведений программы.
 Часто рассматривают более узкий класс -- <<состояния гонки по данным>>. Эта ситуация возникает при одновременном доступе к данным из разных потоков (процессов).
 %Здесь и далее не будем различать потоки и процессы, так как их различия не имеют отношения к теме работы.
-Состояния гонки по данным становятся опасными в случае, если имеет место хотя бы один доступ на запись в разделяемую область памяти.
+Одновременное чтение данных из нескольких потоков не может привести к недетерминированным результатам, и состояния гонки по данным становятся опасными в случае, если имеет место хотя бы один доступ на запись в разделяемую область памяти.
 %Пример!
 В этом случае результирующее значение переменной зависит от порядка выполнения инструкций, а в параллельно выполняемом коде, в общем случае, последовательность выполнения инструкций не определена. 
 
@@ -54,23 +54,22 @@
  
 Состояния взаимных блокировок являются вторым большим классом ошибок в многопоточных программах.
 Они возникают при некорректном использовании блокирующих механизмов синхронизации.
-В этом случае все потоки системы находятся в ожидании некоторого разблокирующего действия от других потоков и не могут продолжить свое выполнение. 
+В этом случае некоторые потоки системы находятся в ожидании некоторого разблокирующего действия от других потоков и не могут продолжить свое выполнение. 
 
 Оба класса ошибок так или иначе связаны с некорректной синхронизацией параллельно выполняющихся потоков.
-Такие ошибки, связанные с параллельным исполнением кода, искать и исправлять гораздо сложнее, чем ошибки в последовательном коде, так как необходимо анализировать все возможные сценарии взаимодействия потоков.
-Кроме того, поиск и исправление таких ошибок осложняется случайным характером их проявлений, ошибка может проявляться очень редко.
+Поиск и исправление таких ошибок, связанных с параллельным исполнением кода, затруднен из-за необходимости анализировать все возможные сценарии взаимодействия потоков, а также из-за случайного характера их проявления, так как ошибка может проявляться очень редко.
 Это связано с тем, что для проявления ошибки необходимы некоторая конкретная последовательность и порядок действий различных потоков. 
-В системном программном обеспечении могут использоваться не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, например, запреты прерываний. 
-Таким образом, обнаружить ошибку, связанную с некорректной синхронизацией потоков, вручную практически невозможно, поэтому для их поиска используются различные автоматизированные подходы.
-Кроме этого, для анализа системного программного обеспечения, например, операционных систем, требуются специализированные инструменты, которые будут учитывать их особенности.
+В системном программном обеспечении могут использоваться не только обыкновенные примитивы синхронизации, но и некоторые специальные, например, запреты прерываний. 
+Для упрощения поиска таких ошибок рарабатываются различные автоматизированные подходы.
+Но для анализа системного программного обеспечения, например, операционных систем, требуются специализированные инструменты, которые будут учитывать их особенности.
 
 Обычно выделяют два класса подходов к анализу программ: статические, которые проводят анализ исходного кода программы, и динамические, которые анализируют поведение программы в процессе ее выполнения.
 Каждый имеет свои достоинства и недостатки, например, методы динамического анализа обычно характеризуются высоким уровнем истинных предупреждений, в то время как статические методы позволяют покрыть больший объем кода.
 На данный момент не существует универсального подхода для анализа программ.
 
-В прикладных пользовательских программах может быть достаточно провести тщательное тестирование, возможно, с помощью инструментов динамического анализа, чтобы проверить основные сценарии поведения программы.
+В большинстве прикладных пользовательских программ может быть достаточно провести тщательное тестирование, возможно, с помощью инструментов динамического анализа, чтобы проверить основные сценарии поведения программы.
 %Однако, такое тестирование не дает гарантий корректного поведения даже при тех же самых условиях и входных данных, что для пользовательских приложений является приемлемым вариантом.
-В случае же системного программного обеспечения цена пропущенной ошибки может быть слишком велика.
+В случае же критически важного ПО, в т.ч. системного программного обеспечения, цена пропущенной ошибки может быть слишком велика.
 Кроме того, некоторые сценарии поведения программы слишком сложно воспроизвести при реальном выполнении.
 Устройство системного программного обеспечения отличается от прикладных программ, что затрудняет анализ, так как далеко не все методы принимают во внимание специфику системного программного обеспечения.
 Поэтому применения только динамического анализа недостаточно, необходимо применять и методы статического анализа.
@@ -175,8 +174,8 @@
   \item Семинар <<Математические вопросы информатики>> Мехмат МГУ, Москва, Россия, 2019 г.
 \end{itemize}
 
-\publications\ Основные результаты по теме диссертации изложены в 6 печатных изданиях~\cite{lockatorVAK,lockatorVAK2,TMPA2017,theoryVAK,lockatorSyrcose,lockatorTMPA}, 
-    4 из которых изданы в журналах, рекомендованных ВАК~\cite{lockatorVAK,lockatorVAK2,TMPA2017,theoryVAK}, из них 1 находится в базе Scopus~\cite{TMPA2017},
+\publications\ Основные результаты по теме диссертации изложены в 8 печатных изданиях~\cite{theoryVAK,KernelRaces,LockatorScalable,lockatorVAK,lockatorVAK2,TMPA2017,lockatorSyrcose,lockatorTMPA}, 
+    6 из которых изданы в журналах, рекомендованных ВАК~\cite{theoryVAK,lockatorVAK,lockatorVAK2,KernelRaces,LockatorScalable,TMPA2017}, из них 3 находится в базе Scopus~\cite{KernelRaces,LockatorScalable,TMPA2017},
     2 "--- в тезисах докладов~\cite{lockatorSyrcose,lockatorTMPA}.
 
 В статье~\cite{lockatorVAK} автором описана основная идея метода (глава 3) и его реализация (глава 5).
@@ -184,5 +183,6 @@
 В статье~\cite{TMPA2017} автором написаны разделы, посвященные разработанному методу и его реализации (главы 3--6).
 В статье~\cite{lockatorSyrcose} автором написаны разделы, в которых описывается ключевые особенности метода (главы 3--5).
 В статье~\cite{lockatorTMPA} автором написаны разделы, посвященные разработанному методу (главы 3--5).
+В статье~\cite{LockatorScalable} автором написаны разделы, описывающие теорию масштабируемого метода (главы 3--8).
 
 {\contribution} Все представленные в диссертации результаты получены лично автором.
