--- a/common/concl.tex
+++ b/common/concl.tex
@@ -19,7 +19,7 @@
 \end{enumerate}
 
 Эксперименты показали преимущества подхода на больших верификационных задачах перед существующими техниками статической верификации.
-Небольшие задачи со сложным взаимодействием потоков лучше решаются другими инструментами, так как предложенный подход абстрагируется от такого взаимодействия.
+Небольшие задачи со сложным взаимодействием потоков лучше решаются другими инструментами, так как предложенный подход абстрагируется от такого взаимодействия, что приводит к потере точности, существенной для небольших искусственных задач.
 Однако разработанный подход также не пропускает ошибок (при некоторых предположениях) и может быть развит в будущем.
 
 Таким образом, можно заключить, что основные требования к новому инструменту были выполнены, так как он успешно применяется к различным программным системам, в том числе, к драйверам ОС Linux и ядрам ОС реального времени.
