--- a/common/data.tex
+++ b/common/data.tex
@@ -27,7 +27,7 @@
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{2020}
+{2021}
 \newcommand{\thesisOrganization}       % Диссертация, организация
 {Институт системного программирования им. В.П. Иванникова \\ Российской академии наук}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
@@ -53,19 +53,19 @@
 {заведующий сектором}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
-{Романенко Сергей Анатольевич}
+{Климов Юрий Андреевич}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
 {кандидат физико-математических наук}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
 {Федеральное государственное учреждение ``Федеральный исследовательский центр Институт прикладной математики им. М.В. Келдыша РАН''}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
-{ведущий научный сотрудник}
+{старший научный сотрудник}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки
 {Федеральное государственное учреждение Федеральный исследовательский центр Информатика и управление Российской академии наук}
 
 \newcommand{\defenseDate}              % Защита, дата
-{18 июня 2020~г.~в~15 часов}
+{22 мая 2021~г.~в~15 часов}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {Д\,002.087.01}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
@@ -83,7 +83,7 @@
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
 {\todo{Название библиотеки}}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\underline{\hspace{2cm}} 2020 года}
+{\underline{\hspace{2cm}} 2021 года}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
